// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalView behaviors should render non-arrays 1`] = `
.css-rdsogp,
[data-css-rdsogp] {
  overflow: hidden;
}

.css-qtahyn,
[data-css-qtahyn] {
  transform: translate3d(-200%, 0, 0);
  transition: .5s;
  -webkit-transform: translate3d(-200%, 0, 0);
  -webkit-transition: .5s;
  -moz-transition: .5s;
}

.css-63oe3q,
[data-css-63oe3q] {
  width: 100%;
}

<View
  alignH="start"
  alignV="stretch"
  data-css-rdsogp=""
  fill={false}
  flex="flex"
  onRef={[Function]}
>
  <View
    alignH="start"
    alignV="stretch"
    data-css-qtahyn=""
    direction="row"
    fill={false}
    flex="flex"
    id="horizontal"
    onRef={[Function]}
    onTransitionEnd={[Function]}
  >
    <View
      alignH="start"
      alignV="stretch"
      data-css-63oe3q=""
      direction="column"
      fill={false}
      flex="none"
      key="0/.$first"
      onRef={[Function]}
    >
      <Text
        block={true}
        color="text"
        id="first"
        key="first"
        size="l"
      >
        Text 1
      </Text>
    </View>
    <View
      alignH="start"
      alignV="stretch"
      data-css-63oe3q=""
      direction="column"
      fill={false}
      flex="none"
      key="1/.$second"
      onRef={[Function]}
    >
      <Text
        block={true}
        color="text"
        id="second"
        key="second"
        size="l"
      >
        Text 2
      </Text>
    </View>
    <View
      alignH="start"
      alignV="stretch"
      data-css-63oe3q=""
      direction="column"
      fill={false}
      flex="none"
      key="2/.2"
      onRef={[Function]}
    />
  </View>
</View>
`;

exports[`HorizontalView behaviors should render with array too 1`] = `
.css-rdsogp,
[data-css-rdsogp] {
  overflow: hidden;
}

.css-qtahyn,
[data-css-qtahyn] {
  transform: translate3d(-200%, 0, 0);
  transition: .5s;
  -webkit-transform: translate3d(-200%, 0, 0);
  -webkit-transition: .5s;
  -moz-transition: .5s;
}

.css-63oe3q,
[data-css-63oe3q] {
  width: 100%;
}

<View
  alignH="start"
  alignV="stretch"
  data-css-rdsogp=""
  fill={false}
  flex="flex"
  onRef={[Function]}
>
  <View
    alignH="start"
    alignV="stretch"
    data-css-qtahyn=""
    direction="row"
    fill={false}
    flex="flex"
    onRef={[Function]}
    onTransitionEnd={[Function]}
  >
    <View
      alignH="start"
      alignV="stretch"
      data-css-63oe3q=""
      direction="column"
      fill={false}
      flex="none"
      key="0/.$first"
      onRef={[Function]}
    >
      <Text
        block={true}
        color="text"
        id="first"
        key="first"
        size="l"
      >
        Text 1
      </Text>
    </View>
    <View
      alignH="start"
      alignV="stretch"
      data-css-63oe3q=""
      direction="column"
      fill={false}
      flex="none"
      key="1/.$second"
      onRef={[Function]}
    >
      <Text
        block={true}
        color="text"
        id="second"
        key="second"
        size="l"
      >
        Text 2
      </Text>
    </View>
    <View
      alignH="start"
      alignV="stretch"
      data-css-63oe3q=""
      direction="column"
      fill={false}
      flex="none"
      key="2/.2"
      onRef={[Function]}
    />
  </View>
</View>
`;
